# cover-letter-writer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  generate.py  generate_cover_letter.py  pyproject.toml  requirements-dev.txt  requirements.txt  web.py
.github/workflows/: build-publish.yaml  publish.yaml  test.yaml  tests.yaml
tests/: docker-compose.yaml  test_generate.py  test_web.py
