[project]
name = "cover-letter-writer"
version = "1.5"
description = "A tool to generate a cover letter using a LLM"
readme = "README.md"
requires-python = ">=3.14, <3.15"
dependencies = [
    "fastapi[standard]==0.138.0",
    "pypdf==6.14.2",
    "requests==2.34.2",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
]
