[project]
name = "cover-letter-writer"
version = "1.6"
description = "A tool to generate a cover letter using a LLM"
readme = "README.md"
requires-python = ">=3.14, <3.15"
dependencies = [
    "fastapi[standard]==0.138.2",
    "pypdf==6.14.2",
    "requests==2.34.2",
]

[dependency-groups]
dev = [
    "mypy==1.18.2",
    "pytest==9.1.1",
    "ruff==0.14.4",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# E501: inline HTML templates contain intentionally long lines.
# B008: FastAPI uses callables (File/Form) in argument defaults by design.
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.14"
warn_unused_ignores = true
warn_redundant_casts = true
